--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-     "deploy": "npm run build && surge dist --domain christianleong.surge.sh"
+    "deploy": "npm run build && surge dist --domain christianleong.surge.sh"
   },
   "dependencies": {
     "animejs": "^3.2.2",
+    "lottie-react": "^2.4.0",
     "react": "^18.2.0",
+    "react-card-slider-component": "^1.0.9",
     "react-dom": "^18.2.0",
+    "react-multi-carousel": "^2.8.4",
     "react-responsive": "^9.0.2",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "react-scroll": "^1.9.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
