--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "deploy": "npm run build && surge dist --domain christianleong.surge.sh"
   },
   "dependencies": {
+    "@splidejs/react-splide": "^0.7.12",
     "animejs": "^3.2.2",
+    "flickity": "^3.0.0",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-card-slider-component": "^1.0.9",
